# sc8pr

./: ChangeLog.txt  MANIFEST.in  README.md  README.txt  bat.7z  setup-distutils.py  setup.cfg  setup.py  setup.py.bak  test.py
gallery/asterShield/: asterShield.pyw
gallery/brownian/: brownian.pyw
gallery/soccer/: soccer.py
gallery/ticTacToe/: tic.py
sc8pr/: __init__.py  _cs.py  _event.py  cache.py  color.py  data.py  effects.py  ffrun.py  geom.py  geometry.py  grid.py  gui.py  image.py  io.py  layer.py  matrix.py  papplet.py  physics.py  plot.py  ram.py  robot.py  sc8pr.data  search.py  shape.py  sketch.py  sprite.py  text.py  util.py  video.py  widgets.py
sc8pr/effect/: __init__.py  clock.py  math.py  stamp.py
sc8pr/examples/: __init__.py  _pypath.py  asterShield.py  chimp.py  depends.py  electric.py  fakeCursor.py  hanoi.py  robotSim.py  rockPaperScissors.py  s8vConv.py  s8vPlay.py  s8vUtil.py  scrRec.py  soccer.py  ticTacToe.py  vector2d.py
sc8pr/gui/: button.py  dialog.py  menu.py  msgBox.py  progress.py  radio.py  robot.py  scroll.py  slider.py  tbcanvas.py  textinput.py  tk.py  tkdialog.py
sc8pr/icons/: fileBrowser.json
sc8pr/math/: matrix.py
sc8pr/media/: layer.py
sc8pr/misc/: arrowimage.py  barchart.py  crop.py  cursors.py  effect.py  grab.py  hsv.py  latex.py  locus.py  media.py  movie.py  pil.py  plot.py  plotcanvas.py  progress.py  robot.py  s8v.py  table.py  typeset.py  vector2d.py  video.py  webCache.py  webcache.py  webcache1.py
sc8pr/plot/: __init__.py  graph.py  json.py  mpl.py  regression.py  scroll.py  shape.py
sc8pr/robot/: __init__.py  arena.py  gui.py  park.py  party.py  sim.py  soccer.py
sc8pr/shape/: __init__.py  locus.py
scopr/: color.py  data.py  geometry.py  grid.py  gui.py  image.py  io.py  papplet.py  physics.py  plot.py  robot.py  search.py  sketch.py  util.py  widgets.py
scropr/: __init__.py  fonts.json  grid.py  papplet.py  physics.py  sketch.py
tools/: imageShape.py  s8v_player.py
wigs/: __init__.py  color.py  data.py  fonts.json  geometry.py  grid.py  gui.py  image.py  io.py  matrix.py  papplet.py  physics.py  plot.py  robot.py  robotSpeech.py  search.py  sketch.py  theme.py  util.py  widgets.py
(+35 files in other folders)
