[metadata]
name = sc8pr
version = 3.0.a1
author = D.G. MacCarthy
author_email = sc8pr.py@gmail.com
url = https://dmaccarthy.github.io/sc8pr
description = A simple framework for new and experienced Python programmers to create animations, games, robotics simulations, and other graphics-based programs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = graphics animation sprite gui robotics pygame educational
license = GPLv3
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Education
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: pygame
	Topic :: Multimedia :: Graphics
	Topic :: Education
	Topic :: Games/Entertainment

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	pygame>=1.9.2,<3
	imageio>=2.8,<3
	imageio-ffmpeg>=0.4,<1
	numpy>=1.20,<2
	matplotlib>=3.0,<4
	pillow>=9.0,<10
python_requires = >=3.7,<3.11

[options.package_data]
sc8pr = *.data
